--- a/css/style.css
+++ b/css/style.css
@@ -1677,3 +1677,42 @@ video {
 .tab-content a {
   pointer-events: none;
 }
+
+
+  .lightbox {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    padding-top: 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.9);
+  }
+
+  .lightbox-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+
+  .lightbox:target {
+    display: block;
+  }
+
+  .close {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  .close:hover {
+    color: #bbb;
+  }
